# Arknight-BE

./: .env  .gitignore  ETL.py  README.md  database.py  docker-compose.yml  import_data.py  import_data_2.py  main.py  model.py  pyproject.toml  schema.py
.github/workflows/: deploy.yml
lib/: ERD.sql  database.py  main.py  model.py  schemas.py
lib/api/: api.py  deps.py
lib/api/endpoint/: character.py  item.py  stage.py
lib/core/: database.py
lib/models/: character.py  common.py  item.py  module.py  skill.py  skin.py  stage.py
lib/repositories/: base.py  character.py  item.py  skill.py  stage.py
lib/schemas/: character.py  common.py  item.py  module.py  skill.py  stage.py
lib/service/: base.py  character.py  item.py  stage.py
redis_data/: dump.rdb
sql/: .env  CHANGELOG.md  QUICKSTART.md  README.md  add_skilltable.py  arknights_etl.py  model.sql  newSQL.sql  run_etl.py  sample_queries.py  validate_etl.py
